k8s/05-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alireza-todo-app
  labels:
    app: alireza-todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alireza-todo-app
  template:
    metadata:
      labels:
        app: alireza-todo-app
    spec:
      containers:
        - name: alireza-todo-app
          image: harbor.kakor.ovh/ipim2il/alireza-todo-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
