k8s/06-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alireza-todo-app
  labels:
    app: alireza-todo-app
spec:
  type: ClusterIP
  selector:
    app: alireza-todo-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
